Use `graalvm-ce` instead of `graalvm11`